# keti.llm.model

./: .gitignore  pyproject.toml  requirements.txt
data/instrcution/: generation_QA_set_20250722.json  qa_20 무_고화질_단면.json  qa_2023농업기술길잡이_농업기계 안전이용 기술_최종(단면).json  qa_23 상추_저화질_단면.json  qa_30 밀_저품질_단면.json  qa_33 감자_저화질_단면.json  qa_5 고추 최종파일_단면.json  qa_농업기술길잡이035_옥수수.PDF.json  qa_농업기술길잡이127_부추.PDF.json  qa_농업기술길잡이128_배추.PDF.json  qa_농업기술길잡이169_벼 직파 재배기술.json  qa_마늘_단면(수정).json  qa_조사료-단면.json  qa_주간농사정보 제26호(2025.7.7.~7.13.).json  qa_주간농사정보 제27호(2025.7.14.~7.20.).json  qa_주간농사정보 제42호 (2023.10.16.~10.22.).json
models/: main.py
models/notebook/: Dockerfile  Finetun_20250721a.ipynb  Finetune_20250716a.ipynb  Finetune_20250716b.ipynb  cleansing_data_20250717a.ipynb  extract_document_parse_20250717a.ipynb  extract_document_parse_20250717b.ipynb  extract_document_parse_20250717c.ipynb  extract_document_parse_20250717d.ipynb  extract_document_parse_20250718a.ipynb  instruction_generate.ipynb  storage_test_20250718.ipynb
operation/Vector/: main.py
operation/Vector/config/: embedding.py  load_storage.py
operation/serving/: main.py
operation/serving/dto/: inference_schemas.py  routings.py
operation/serving/router/: inference_router.py
operation/storage/: Dockerfile  storage.docker-compose.yaml
operation/vLLM/: Dockerfile  start-vllm.sh
preprocess/: augmentation.py  convert_parquet.py  scrap_agripaper.py  scrap_agritech.py
preprocess/scrap/: extract_document.py  requests.py
preprocess/utils/: generate.py  merge.py  storage.py
(+4 files in other folders)
